--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,14 +4,16 @@ permissions:
   contents: read
 jobs:
   test:
-    strategy:
-      matrix:
-        go-version: [1.16.x, 1.19.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-go@v3
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: 1.20.x
     - uses: actions/checkout@v3
+    - run: go vet ./...
+    - uses: golangci/golangci-lint-action@v3.2.0
+      with:
+        version: latest
+        skip-build-cache: true
+        skip-pkg-cache: true
     - run: go test -race ./...
