--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,19 +1,31 @@
 name: CI
-on: [push, pull_request]
+on: [pull_request]
 permissions:
   contents: read
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  lint:
+    strategy:
+      matrix:
+        go: ['1.16','1.21']
+        os: ['ubuntu-latest']
+    name: lint
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/setup-go@v3
-      with:
-        go-version: 1.20.x
-    - uses: actions/checkout@v3
-    - run: go vet ./...
-    - uses: golangci/golangci-lint-action@v3.2.0
-      with:
-        version: latest
-        skip-build-cache: true
-        skip-pkg-cache: true
-    - run: go test -race ./...
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go }}
+      - uses: actions/checkout@v3
+      - uses: golangci/golangci-lint-action@v3
+  test:
+    strategy:
+      matrix:
+        go: ['1.16','1.21']
+        os: ['ubuntu-latest']
+    name: test
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go }}
+      - uses: actions/checkout@v3
+      - run: go test -race ./...
